crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_multiple_operations.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "\n        query GetUser { user { id } }\n        query GetPosts { posts { id } }\n    ",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 9,
                        end: 38,
                    },
                    operation_type: Query,
                    name: Some(
                        Name(
                            "GetUser",
                        ),
                    ),
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 25,
                                        end: 36,
                                    },
                                    alias: None,
                                    name: Name(
                                        "user",
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 32,
                                                        end: 36,
                                                    },
                                                    alias: None,
                                                    name: Name(
                                                        "id",
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 47,
                        end: 78,
                    },
                    operation_type: Query,
                    name: Some(
                        Name(
                            "GetPosts",
                        ),
                    ),
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 64,
                                        end: 76,
                                    },
                                    alias: None,
                                    name: Name(
                                        "posts",
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 72,
                                                        end: 76,
                                                    },
                                                    alias: None,
                                                    name: Name(
                                                        "id",
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
