crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_mutation.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "mutation CreateUser { createUser(name: \"John\") { id } }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 55,
                    },
                    operation_type: Mutation,
                    name: Some(
                        Name(
                            "CreateUser",
                        ),
                    ),
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 22,
                                        end: 53,
                                    },
                                    alias: None,
                                    name: Name(
                                        "createUser",
                                    ),
                                    arguments: [
                                        Argument {
                                            span: Span {
                                                start: 33,
                                                end: 45,
                                            },
                                            name: Name(
                                                "name",
                                            ),
                                            value: String(
                                                "John",
                                            ),
                                        },
                                    ],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 49,
                                                        end: 53,
                                                    },
                                                    alias: None,
                                                    name: Name(
                                                        "id",
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
