crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_nested_selection_sets.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "query { user { posts { comments { author { name } } } } }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 57,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 55,
                                    },
                                    alias: None,
                                    name: Name(
                                        "user",
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 15,
                                                        end: 53,
                                                    },
                                                    alias: None,
                                                    name: Name(
                                                        "posts",
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [
                                                            Field(
                                                                Field {
                                                                    span: Span {
                                                                        start: 23,
                                                                        end: 51,
                                                                    },
                                                                    alias: None,
                                                                    name: Name(
                                                                        "comments",
                                                                    ),
                                                                    arguments: [],
                                                                    directives: [],
                                                                    selection_set: SelectionSet {
                                                                        selections: [
                                                                            Field(
                                                                                Field {
                                                                                    span: Span {
                                                                                        start: 34,
                                                                                        end: 49,
                                                                                    },
                                                                                    alias: None,
                                                                                    name: Name(
                                                                                        "author",
                                                                                    ),
                                                                                    arguments: [],
                                                                                    directives: [],
                                                                                    selection_set: SelectionSet {
                                                                                        selections: [
                                                                                            Field(
                                                                                                Field {
                                                                                                    span: Span {
                                                                                                        start: 43,
                                                                                                        end: 49,
                                                                                                    },
                                                                                                    alias: None,
                                                                                                    name: Name(
                                                                                                        "name",
                                                                                                    ),
                                                                                                    arguments: [],
                                                                                                    directives: [],
                                                                                                    selection_set: SelectionSet {
                                                                                                        selections: [],
                                                                                                    },
                                                                                                },
                                                                                            ),
                                                                                        ],
                                                                                    },
                                                                                },
                                                                            ),
                                                                        ],
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
