crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_non_null_type.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "type User { id: ID! name: String! }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: Name(
                            "User",
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: Name(
                                    "id",
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: "ID",
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                            FieldDefinition {
                                description: None,
                                name: Name(
                                    "name",
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: "String",
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
